force-app/main/default/objects/RTR_Route_Master__c/RTR_Route_Master__c.object-meta.xml
<CustomObject>
    <description>This Object will store details about the Bus Routes, Pick up points and its capacity.</description>
    <label>Route Master</label>
    <nameField>
        <label>Route Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>