force-app/main/default/objects/RTR_Route_Master__c/fields/Bus_Regd_No__c.field-meta.xml
<CustomField>
    <fullName>Bus_Regd_No__c</fullName>
    <label>Bus Regd. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>