force-app/main/default/objects/RTR_Route_Master__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <formula>TEXT(RTR_Capacity__c -( rtr_Faculty_CapacityAllocated__c + rtr_Student_Capacity_Allocated__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Seats</label>
    <type>Text</type>
</CustomField>