force-app/main/default/objects/RTR_Route_Master__c/fields/RTR_Capacity__c.field-meta.xml
<CustomField>
    <fullName>RTR_Capacity__c</fullName>
    <label>Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>