force-app/main/default/objects/RTR_Route_Master__c/fields/rtr_Faculty_CapacityAllocated__c.field-meta.xml
<CustomField>
    <fullName>rtr_Faculty_CapacityAllocated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Faculty Capacity Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>