force-app/main/default/objects/RTR_Route_Master__c/fields/RTR_Route_Path__c.field-meta.xml
<CustomField>
    <fullName>RTR_Route_Path__c</fullName>
    <description>This field is used to store information regarding the Bus Route path</description>
    <label>Route Path</label>
    <type>TextArea</type>
</CustomField>