force-app/main/default/objects/RTR_Route_Master__c/fields/RTR_Student_Capacity__c.field-meta.xml
<CustomField>
    <fullName>RTR_Student_Capacity__c</fullName>
    <label>Student Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>