force-app/main/default/objects/RTR_Route_Master__c/fields/Total_Seats_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats_Allocated__c</fullName>
    <formula>rtr_Student_Capacity_Allocated__c + rtr_Faculty_CapacityAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Seats Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>