force-app/main/default/objects/RTR_Route_Master__c/validationRules/Total_Capacity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Capacity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>RTR_Student_Capacity__c + RTR_Faculty_Capacity__c &gt; RTR_Capacity__c</errorConditionFormula>
    <errorMessage>Capacity should be the sum of student capacity and faculty capacity</errorMessage>
</ValidationRule>