force-app/main/default/objects/RTR_Route_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTR_Route_Path__c</columns>
    <columns>RTR_Capacity__c</columns>
    <columns>RTR_Student_Capacity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>